--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat:wght@600&family=Noto+Sans:wght@600&family=Poppins:wght@500&family=Roboto:wght@700&display=swap');
+@import './styles/style.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +8,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: azure;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar-sticky-active[id=sticky_navbar] {
+  background-color: yellow;
+  color: red;
+  transition: 0.3s;
+}
+
+.h-40px {
+  height: 40px;
+}
+
+.navbar-sticky {
+  background-color: azure;
+  height: 90%;
+  color: red;
+  transition: 0.3s;
+}
+.carousel-custom {
+  height: 650px;
+  width: 100%;
+  margin: 0;
+}
+
+.carousel-custom-text {
+  font-size: 4.6rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
 }
