--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -20,3 +20,28 @@
   font-weight: 600;
   font-size: 1.4rem
 }
+
+.transaction-button {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn.btn-transaction {
+ 
+  color: white;
+  background-color: #FF257B;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 24px;
+  border-radius: 8px;
+  width: 100%;
+  height: 2.5rem;
+  transition: 0.3s;
+  
+}
